--- a/config.yaml
+++ b/config.yaml
@@ -14,22 +14,24 @@ dns:
   listen: '0.0.0.0:53'
   enhanced-mode: redir-host
   nameserver:
-    - 115.159.59.182
+    - 192.168.50.53
 #    - tls://dns.233py.com:853
 # fallback: # 与 nameserver 内的服务器列表同时发起请求，当规则符合 GEOIP 在 CN 以外时，fallback 列表内的域名服务器生效。
 #  - 8.8.4.4
 Proxy:
-- { name: "byxiaopeng", type: vmess, server: usw1.cnm.workers.dev, port: 443, uuid: ad806487-2d26-4636-98b6-ab85cc8521f7, alterId: 64, cipher: auto, network: ws, ws-path: /ws, tls: true }
-- { name: "heroku", type: vmess, server: prov2ss.cnm.workers.dev, port: 443, uuid: ad806487-2d26-4636-98b6-ab85cc8521f7, alterId: 64, cipher: auto, network: ws, ws-path: /, tls: true }
-- { name: "t免费节点", type: vmess, server: t.ibcl.us, port: 443, uuid: ad806487-2d26-4636-98b6-ab85cc8521f7, alterId: 64, cipher: auto, network: ws, ws-path: /, tls: true }
-
+- { name: "byxiaopeng", type: vmess, server: usw1.cnm.workers.dev, port: 443, uuid: ad806487-2d26-4636-98b6-ab85cc8521f7, alterId: 4, cipher: auto, network: ws, ws-path: /ws, tls: true }
+- { name: "heroku", type: vmess, server: prov2ss.cnm.workers.dev, port: 443, uuid: ad806487-2d26-4636-98b6-ab85cc8521f7, alterId: 4, cipher: auto, network: ws, ws-path: /, tls: true }
+- { name: "t免费节点", type: vmess, server: t.ibcl.us, port: 443, uuid: ad806487-2d26-4636-98b6-ab85cc8521f7, alterId: 4, cipher: auto, network: ws, ws-path: /, tls: true }
+- { name: "eu德国", type: vmess, server: ip.armn1.ml, port: 443, uuid: aa12098f-56f3-49ed-bd5d-267f3ce2e873, alterId: 4, cipher: auto, network: ws, ws-path: /, tls: true }
 Proxy Group:
 # url-test 可以自动选择与指定 URL 测速后，延迟最短的服务器
 # - { name: "PROXY", type: url-test, proxies: ["heroku", "t"], url: "http://www.gstatic.com/generate_204", interval: 300 }
 - { name: "全球直连", type: select, proxies: ["DIRECT"] }
 - { name: "全球拦截", type: select, proxies: ["REJECT", "DIRECT"] }
 - { name: "未写规则域名代理", type: select, proxies: ["heroku", "byxiaopeng", "t免费节点"] }
-- { name: "youtube", type: select, proxies: ["byxiaopeng", "heroku", "t免费节点"] }
+- { name: "youtube", type: select, proxies: ["eu德国", "heroku","byxiaopeng", "t免费节点"] }
+- { name: "奈非", type: select, proxies: ["eu德国","byxiaopeng", "t免费节点"] }
+- { name: "Telegram", type: select, proxies: ["t免费节点","heroku"] }
 Rule:
 - DOMAIN-SUFFIX,google.com,youtube
 - DOMAIN-SUFFIX,google.com.hk,youtube
@@ -43,15 +45,36 @@ Rule:
 - DOMAIN-SUFFIX,googlevideo.com,youtube
 
 - DOMAIN-SUFFIX,googleapis.com,youtube
+
+- DOMAIN-SUFFIX,netflix.com,奈非
+- DOMAIN-SUFFIX,nflxext.com,奈非
+- DOMAIN-SUFFIX,nflxvideo.net,奈非
+- DOMAIN-SUFFIX,nflxso.net,奈非
+- IP-CIDR,45.57.0.0/17,奈非
 #直连
+- DOMAIN-SUFFIX,kubesail.io,全球直连
+- DOMAIN-SUFFIX,avtb8899.com,全球直连
+- DOMAIN-SUFFIX,workers.dev,全球直连
+- DOMAIN-SUFFIX,armn1.ml,全球直连
+- DOMAIN-SUFFIX,ip-api.com,全球直连
 - DOMAIN-SUFFIX,apple.com,全球直连
 - DOMAIN-SUFFIX,akadns.net,全球直连
 - DOMAIN-SUFFIX,lastpass.com,全球直连
+
+- DOMAIN-SUFFIX,t.me,Telegram
+- DOMAIN-SUFFIX,tdesktop.com,Telegram
+- DOMAIN-SUFFIX,telegra.ph,Telegram
+- DOMAIN-SUFFIX,telegram.me,Telegram
+- DOMAIN-SUFFIX,telegram.org,Telegram
+- IP-CIDR,91.108.16.0/22,Telegram
+- IP-CIDR,91.108.56.0/23,Telegram
+- IP-CIDR,91.108.12.0/22,Telegram
+- IP-CIDR,149.154.172.0/22,Telegram
+- IP-CIDR,149.154.168.0/22,Telegram
 # Local Area Network
 - IP-CIDR,192.168.50.0/24,全球直连
 - IP-CIDR,127.0.0.0/8,全球直连
 # GeoIP China
 # 最终规则
 - GEOIP,CN,全球直连
-# 不在GEOIP域名库的走代理
 - MATCH,未写规则域名代理
