--- a/AdGuardHome.yaml
+++ b/AdGuardHome.yaml
@@ -18,7 +18,7 @@ dns:
   blocking_ipv4: ""
   blocking_ipv6: ""
   blocked_response_ttl: 10
-  ratelimit: 20
+  ratelimit: 0
   ratelimit_whitelist: []
   refuse_any: true
   bootstrap_dns:
@@ -77,12 +77,12 @@ filters:
 whitelist_filters: []
 user_rules: []
 dhcp:
-  enabled: false
-  interface_name: ""
-  gateway_ip: ""
-  subnet_mask: ""
-  range_start: ""
-  range_end: ""
+  enabled: true
+  interface_name: eth0
+  gateway_ip: 192.168.50.66
+  subnet_mask: 255.255.255.0
+  range_start: 192.168.50.78
+  range_end: 192.168.50.222
   lease_duration: 86400
   icmp_timeout_msec: 1000
 clients: []
