--- a/AdGuardHome.yaml
+++ b/AdGuardHome.yaml
@@ -25,7 +25,7 @@ dns:
   - 114.114.114.114
   all_servers: false
   edns_client_subnet: false
-  aaaa_disabled: false
+  aaaa_disabled: true
   allowed_clients: []
   disallowed_clients: []
   blocked_hosts: []
