--- a/.github/workflows/pushdocker.yml
+++ b/.github/workflows/pushdocker.yml
@@ -24,4 +24,4 @@ jobs:
     - name: go buildx
       run: |
         #使用 buildx 构建 并推送倒hub
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash --platform linux/arm64 . --push
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash --platform linux/arm64,linux/amd64 . --push
