--- a/clash.ini
+++ b/clash.ini
@@ -1,11 +1,22 @@
 [program:clash]
+#脚本目录
 directory=/tmp
-command=clash               
+#脚本执行命令
+command=clash
+#supervisor启动的时候是否随着同时启动，默认True
 autostart=true
-autorestart=true
-startsecs=3
+#当程序exit的时候，这个program不会自动重启,默认unexpected，设置子进程挂掉后自动重启的情况，有三个选项，false,unexpected和true。如果为false的时候，无论什么情况下，都不会被重新启动，如果为unexpected，只有当进程的退出码不在下面的exitcodes里面定义的
+autorestart=unexpected
+#这个选项是子进程启动多少秒之后，此时状态如果是running，则我们认为启动成功了。默认值为1
+startsecs=1
+#脚本运行的用户身份
 user = root
+#把stderr重定向到stdout，默认 false
 redirect_stderr = true
-stdout_logfile=/tmp/clash.log
+#日志输出 
+stdout_logfile=/tmp/clash_stdout.log
+stderr_logfile=/tmp/clash_stderr.log
+#stdout日志文件大小，默认 50MB
 stdout_logfile_maxbytes = 50MB
+#stdout日志文件备份数
 stdout_logfile_backups = 20
