--- a/.github/workflows/pushdocker.yml
+++ b/.github/workflows/pushdocker.yml
@@ -1,8 +1,7 @@
 name: pushdocker
 on:
-  push:
-    branches:
-      - master
+  watch:
+    types: started 
 jobs:
   build:
     runs-on: ubuntu-20.04  
